# smart-esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/app/: CMakeLists.txt
components/app/inc/: app_nvs_storage.h  app_storage_nvs.h  app_ui_lvgl.h  app_voice_sr.h
components/app/src/: app_nvs_storage.c  app_storage_nvs.c  app_ui_lvgl.c  app_voice_sr.c
components/drv/: CMakeLists.txt  idf_component.yml
components/drv/inc/: drv_dvp_cam.h  drv_gpio_key.h  drv_i2c_bus.h  drv_i2c_imu.h  drv_i2c_io_expander.h  drv_i2c_touch.h  drv_i2s_audio.h  drv_i2s_bus.h  drv_sdio_sdcard.h  drv_spi_lcd.h
components/drv/src/: drv_dvp_cam.c  drv_gpio_key.c  drv_i2c_bus.c  drv_i2c_imu.c  drv_i2c_io_expander.c  drv_i2c_touch.c  drv_i2s_audio.c  drv_i2s_bus.c  drv_sdio_sdcard.c  drv_spi_lcd.c
main/: CMakeLists.txt  idf_component.yml  main.c
