idf_component_register(SRCS "src/drv_gpio_key.c" 
                            "src/drv_i2c_bus.c"
                            "src/drv_i2c_imu.c"
                            "src/drv_sdio_sdcard.c" 
                            "src/drv_i2c_io_expander.c"
                            "src/drv_spi_lcd.c"
                            "src/drv_dvp_cam.c"
                            "src/drv_i2c_touch.c"
                            "src/drv_i2s_audio.c"
                    INCLUDE_DIRS 
                            "inc"
                    REQUIRES 
                        app
                        esp_driver_gpio
                        esp_driver_sdmmc  
                        esp_driver_i2c  
                        esp_driver_spi 
                        esp_driver_ledc   
                        esp_lcd                
                        sdmmc
                        fatfs
                        driver
                        esp32-camera
                        espressif__esp_lcd_touch_ft5x06
                        esp_driver_i2s
                        espressif__esp_codec_dev
                        espressif__esp_audio_codec
                        espressif__es8311
                        espressif__es7210
                        )